# qt-editor

./: .gitignore  .gitmodules  CMakeLists.txt  EditorGraphicsScene.cpp  EditorGraphicsScene.hpp  aboutdialog.cpp  aboutdialog.ui  appveyor.yml  azure-pipelines.yml  editormainwindow.cpp  editormainwindow.ui  editortab.cpp  editortab.hpp  editortab.ui  firewidget.hpp  main.cpp  model.cpp  model.hpp  qt-editor_German.ts  qt-editor_en_GB.ts  resizeablearrowitem.cpp  resizeablearrowitem.hpp  resizeablerectitem.cpp  resizeablerectitem.hpp
Source/: BasicTypeProperty.cpp  BasicTypeProperty.hpp  CameraGraphicsItem.cpp  CameraGraphicsItem.hpp  CameraManager.cpp  CameraManager.hpp  CameraManager.ui  ClipBoard.cpp  ClipBoard.hpp  DeleteItemsCommand.cpp  DeleteItemsCommand.hpp  EditorGraphicsScene.cpp  EditorGraphicsScene.hpp  EditorMainWindow.cpp  EditorMainWindow.hpp  EditorMainWindow.ui  EditorTab.cpp  EditorTab.hpp  EnumProperty.cpp  EnumProperty.hpp  ExportPathDialog.cpp  ExportPathDialog.hpp  ExportPathDialog.ui  Exporter.cpp  Exporter.hpp  IGraphicsItem.hpp  MessageEditorDialog.cpp  MessageEditorDialog.ui  Model.cpp  Model.hpp  PropertyTreeItemBase.hpp  PropertyTreeWidget.cpp  PropertyTreeWidget.hpp  ReliveApiWrapper.hpp  ResizeableArrowItem.cpp  ResizeableRectItem.cpp  ResizeableRectItem.hpp  ShowContext.hpp  StringProperty.cpp  StringProperty.hpp  (+45 more)
Source/rsc/stylesheets/: dark-stylesheet.qss
